--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -53,8 +53,6 @@ html, body {
     display: block; }
 
 .container .personal-card .header .profile-user-bg:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
   transform: scale(1.1);
   border-color: #1e88e5;
   opacity: 1; }
@@ -83,7 +81,8 @@ html, body {
   border-radius: 7px;
   padding: 10px;
   color: #555;
-  background-color: #e0e0e0; }
+  background-color: #e0e0e0;
+  clear: both; }
 
 .container .personal-card .name-friend a:first-child {
   color: #1e88e5;
