--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -64,8 +64,6 @@ html, body
     display: block
 
 .container .personal-card .header .profile-user-bg:hover
-  -webkit-transform: scale(1.1)
-  -moz-transform: scale(1.1)
   transform: scale(1.1)
   border-color: $blueskyfolk
   opacity: 1
@@ -95,6 +93,7 @@ html, body
   padding: 10px
   color: $graycolor
   background-color: $graylightcolor
+  clear: both
 
 .container .personal-card .name-friend a:first-child
   color: $blueskyfolk
