--- a/skyfolk/templates/account/tab-amigos.html
+++ b/skyfolk/templates/account/tab-amigos.html
@@ -2,7 +2,9 @@
   Pestaña de amigos en el perfil
 {% endcomment %}
 {% load avatar_tags %}
+{% load app_filters %}
 <div id="tab-amigos">
+  {% if not user_profile.username|check_blocked:user.username %}
     {% if privacity == 'A' or isFriend and privacity == 'OF' or user.username == user_profile.username or privacity == 'OFAF' and isFriend or isFollower and privacity == 'OFAF' %}
             <input class="search" type="search" placeholder="¿A quién buscas?" title="Search">
             <button class="sort" data-sort="name">
@@ -26,5 +28,11 @@
           <h3>¡Éste perfil es privado!</h3>
             <br>
         </div>
+    {% endif %}
+    {% else %}
+    <div class="cmt-hidden">
+      <h3>{{user_profile.username}} te ha bloqueado.</h3>
+        <br>
+    </div>
     {% endif %}
 </div>
