--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -5,6 +5,7 @@
 {% load avatar_tags %}
 {% load app_filters %}
   <div id="tab-comentarios">
+    {% if not user_profile.username|check_blocked:user.username %}
 	  {% if privacity == 'A' or isFriend and privacity == 'OF' or user.username == user_profile.username or privacity == 'OFAF' and isFriend or isFollower and privacity == 'OFAF' %} {% comment %} Si eres amigo o estas visitando tu propio perfil... {% endcomment %}
   {% if publications_top15|length == 0 %} <!-- Si el usuario no tiene comentarios, proponemos uno -->
     <div class="no-comments">
@@ -121,5 +122,11 @@
           <h3>¡Éste perfil es privado!</h3>
             <br>
         </div>
+    {% endif %}
+    {% else %}
+    <div class="cmt-hidden">
+      <h3>{{user_profile.username}} te ha bloqueado.</h3>
+        <br>
+    </div>
     {% endif %}
         </div>
