--- a/skyfolk/static/sass/mensajes_privados.sass
+++ b/skyfolk/static/sass/mensajes_privados.sass
@@ -27,12 +27,15 @@ body
   text-transform: uppercase
 
 .image-user
-  width: 90px
-  height: 90px
+  width: 40%
+  height: 40%
+  max-height: 80px
+  max-width: 80px
+  display: inline-block
   & img
     width: 100%
     height: 100%
-    border-radius: 100%
+    border-radius: 3px
 
 
 .no_messages
@@ -59,7 +62,7 @@ body
   margin: auto
   display: block
   border-radius: 7px
-  border-bottom: 3px solid #1E88E5
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
   height: auto
   background-color: #fafafa
 
@@ -168,7 +171,9 @@ label[for="id_body"]
 
 .card
   background-color: #f5f5f5
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
   padding: 10px
+  margin-bottom: 2.5%
   height: auto
 
 .card blockquote
@@ -266,7 +271,6 @@ label[for="id_body"]
 
 .card .msg-inbox
   position: relative
-  top: 0
   display: block
 
 .card a:first-child
@@ -279,10 +283,11 @@ label[for="id_body"]
 
 .card .blue-text
   color: #1e88e5
-  font-size: 1.2em
+  text-align: center
+  font-size: 0.8em
   font-weight: 400
-  display: inline-block
-  position: relative
+  display: block
+  clear: both
 
 .card .new-message
   position: relative
@@ -385,3 +390,18 @@ label[for="id_body"]
     -moz-transform: rotate(270deg)
     transform: rotate(270deg)
     margin: 10px 0 0 -25px
+
+.parent-body
+  height: auto
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
+  padding: 10px
+  display: block
+  position: relative
+  border-left: 3px solid #1e88e5
+  margin-bottom: 2.5%
+
+  & a
+    text-decoration: none
+    color: #1e88e5
+  & b
+    font-weight: 600
