--- a/skyfolk/templates/django_messages/compose.html
+++ b/skyfolk/templates/django_messages/compose.html
@@ -1,6 +1,9 @@
 {% extends "django_messages/base.html" %}
 {% load i18n %}
 {% block body %}
+    {% if parent_body %}
+    <div class="col-lg-6 col-md-12 col-sm-12 parent-body"><a href="/profile/{{ parent_username }}">{{ parent_username }}</a> <b>escribió</b>: {{ parent_body }}</div>
+    {% endif %}
     <h3 class="compose_message">{% trans "Compose Message"%}</h3>
         <div class="col-lg-6 col-md-12 col-sm-12">
             <form action="" method="post">{% csrf_token %}
