--- a/skyfolk/static/sass/mensajes_privados.sass
+++ b/skyfolk/static/sass/mensajes_privados.sass
@@ -308,15 +308,15 @@ label[for="id_body"]
   color: #9e9e9e
 /* Mozilla Firefox 4 to 18 */
 \:-moz-placeholder
-  color: #e0e0e0
+  color: #9e9e9e
   opacity:  1
 /* Mozilla Firefox 19+ */
 ::-moz-placeholder
-  color: #e0e0e0
+  color: #9e9e9e
   opacity:  1
 /* Internet Explorer 10-11 */
 \:-ms-input-placeholder
-  color: #e0e0e0
+  color: #9e9e9e
 
 
 
