--- a/skyfolk/templates/account/base_search.html
+++ b/skyfolk/templates/account/base_search.html
@@ -6,6 +6,7 @@
 {% block title %} <title>Buscar contactos</title> {% endblock %}
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css" onload="if(media!='all')media='all'">
+    <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/search_avanzed.css" onload="if(media!='all')media='all'">
 {% endblock %}
 
 {% block content %}
