--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -30,7 +30,7 @@
             <li class="list-vertical">Publicaciones</li>
             <li class="list-vertical">Imágenes</li>
             <li class="list-vertical">Videos</li>
-            <li class="list-vertical">Más opciones <i class="fa-caret-down" aria-hidden="true"></i>
+            <li class="list-vertical">Más opciones <i class="fa fa-caret-down" aria-hidden="true"></i>
                 <div id="dropdown-search" class="dropdown-options">
                     <ul class="dropdown-ul">
                         <li>Todo</li>
@@ -38,7 +38,7 @@
                         <li>De todos</li>
                         <li>Personas que sigues</li>
                         <li>Personas que te siguen</li>
-                        <li>Búsqueda avanzada</li>
+                        <li id="search-avanzed">Búsqueda avanzada</li>
                     </ul>
                 </div>
             </li>
