--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -1,7 +1,7 @@
 $blueskyfolk: #1e88e5
 $graycolor: #555
 $whitecolor: #fff
-$graylightcolor: #e0e0e0
+$graylightcolor: #f9f9f9
 $transparentgraycolor: rgba(0, 0, 0, 0.4)
 $tomatocolor: #ff6347
 
@@ -10,7 +10,9 @@ html, body
   font-family: 'Open Sans', sans-serif !important
   font-size: 11.5px !important
 
-
+.container-responsive
+  margin-top: 4em
+  
 .account-search, .messages-search
   font-size: 3em
   color: $graycolor
