+ V3 + urls.py => estandar pep8

--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -1,7 +1,7 @@
 $blueskyfolk: #1e88e5
 $graycolor: #555
 $whitecolor: #fff
-$graylightcolor: #f9f9f9
+$graylightcolor: #e0e0e0
 $transparentgraycolor: rgba(0, 0, 0, 0.4)
 $tomatocolor: #ff6347
 
@@ -12,7 +12,7 @@ html, body
 
 .container-responsive
   margin-top: 4em
-  
+
 .account-search, .messages-search
   font-size: 3em
   color: $graycolor
