--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -74,8 +74,7 @@
 {% endfor %}
     </div>
  {% endif %}
-    {% if resultMessages|length == 0 %}
-    {% else %}
+    {% if resultMessages|length != 0 %}
     <div class="col-lg-12 col-md-10 col-sm-12">
     <h2 class="messages-search">Publicaciones</h2>
     {% for pub in resultMessages %}
