--- a/skyfolk/static/sass/news.sass
+++ b/skyfolk/static/sass/news.sass
@@ -25,3 +25,17 @@ html, body
       & img
         width: 100%
         height: 100%
+    & .contenido
+      padding-left: 10px
+      display: block
+    & .author
+      display: block
+      padding-left: 10px
+      margin-bottom: 2%
+      & a
+        text-decoration: none
+        color: $blueskyfolk
+        font-weight: 600
+        margin-right: 2%
+      & i
+        color: $graycolor
