--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -38,7 +38,7 @@
                         <li>De todos</li>
                         <li>Personas que sigues</li>
                         <li>Personas que te siguen</li>
-                        <li id="search-avanzed">Búsqueda avanzada</li>
+                        <li id="search-advanced">Búsqueda avanzada</li>
                     </ul>
                 </div>
             </li>
