+ V3 + Tablón de novedades..

--- a/skyfolk/static/sass/news.sass
+++ b/skyfolk/static/sass/news.sass
@@ -14,6 +14,8 @@ html, body
 .wrapper-news
   background-color: $graylightcolor
   margin-top: 3%
+  border-radius: 3px
+  height: auto
   & .notice-item
     background-color: $whitecolor
     box-shadow: $boxshadow
@@ -39,3 +41,6 @@ html, body
         margin-right: 2%
       & i
         color: $graycolor
+      & .pub-date
+        margin-top: 2%
+        display: block
