--- a/skyfolk/static/css/news.css
+++ b/skyfolk/static/css/news.css
@@ -5,7 +5,9 @@ html, body {
 
 .wrapper-news {
   background-color: #f9f9f9;
-  margin-top: 3%; }
+  margin-top: 3%;
+  border-radius: 3px;
+  height: auto; }
   .wrapper-news .notice-item {
     background-color: #fff;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
@@ -31,5 +33,8 @@ html, body {
         margin-right: 2%; }
       .wrapper-news .notice-item .author i {
         color: #555; }
+      .wrapper-news .notice-item .author .pub-date {
+        margin-top: 2%;
+        display: block; }
 
 /*# sourceMappingURL=news.css.map */
