--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -15,6 +15,7 @@
             </div>
             <div class="col-lg-8 col-md-9 col-sm-8 author">
                 <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a><i>{{ pub.author.first_name }} {{ pub.author.last_name }}</i>
+                <i class="pub-date">{{ pub.created }}</i>
             </div>
             <div class="col-lg-9 col-md-10 col-sm-9 contenido">
                 <p>{{pub.content}}</p>
