+ V3 + Tablón de novedades + Template con todas mis publicaciones (Me gusta, comentarios, imágenes...)

--- a/skyfolk/static/sass/news.sass
+++ b/skyfolk/static/sass/news.sass
@@ -10,9 +10,9 @@ html, body
   color: $graycolor !important
   font-family: 'Open Sans', sans-serif !important
   font-size: 11.5px !important
+  background-color: $graylightcolor
 
 .wrapper-news
-  background-color: $graylightcolor
   margin-top: 3%
   border-radius: 3px
   height: auto
@@ -21,6 +21,7 @@ html, body
     box-shadow: $boxshadow
     padding: 10px
     margin: 0.95%
+    border-radius: 3px
     & .img
       border-radius: 3px
       box-shadow: 0 1px 5px $blueskyfolk
