--- a/skyfolk/static/css/news.css
+++ b/skyfolk/static/css/news.css
@@ -1,10 +1,10 @@
 html, body {
   color: #555 !important;
   font-family: "Open Sans", sans-serif !important;
-  font-size: 11.5px !important; }
+  font-size: 11.5px !important;
+  background-color: #f9f9f9; }
 
 .wrapper-news {
-  background-color: #f9f9f9;
   margin-top: 3%;
   border-radius: 3px;
   height: auto; }
@@ -12,7 +12,8 @@ html, body {
     background-color: #fff;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
     padding: 10px;
-    margin: 0.95%; }
+    margin: 0.95%;
+    border-radius: 3px; }
     .wrapper-news .notice-item .img {
       border-radius: 3px;
       box-shadow: 0 1px 5px #1e88e5; }
