--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -14,7 +14,7 @@
         <!-- Logotipo que re-direcciona a la pagina principal -->
          </div></li>
         <li>
-          <div class="logotipo_skyfolk" onclick="location.href='/'"> <i>S</i>kyfolk</div>
+          <div class="logotipo_skyfolk" onclick="location.href='/profile/{{ request.user }}'" title="Perfil de {{ user }}"><i>S</i>kyfolk</div>
         </li>
          <!-- Notificaciones para skyfolk - (Botón campana) -->
         <li class="notification-bell">
@@ -37,7 +37,6 @@
     <script async src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/core.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
-    <script async src="{{ STATIC_URL }}js/jquery.mark.min.js" type="text/javascript"></script>
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
     <!-- Mentions -->
     <!--
