--- a/skyfolk/templates/account/menu-horizontal.html
+++ b/skyfolk/templates/account/menu-horizontal.html
@@ -8,7 +8,7 @@
           <ul>
               <li class="fa fa-paper-plane fa-2x" id="publish2"> </li>
               <li class="fa fa-home fa-2x" onclick="location.href='/'"> </li>
-              <li class="fa fa-users fa-2x" onclick="location.href='/friends/{{ request.user }}'"> </li>
+              <li class="fa fa-users fa-2x" onclick="location.href='/following/{{ request.user }}'"> </li>
               <li class="fa fa-sign-out fa-2x" onclick="location.href='{% url 'account_logout' %}'"> </li>
                 {% if request.user.profile.image %}
                   <li class="profile-user" onclick="location.href='/profile/{{ request.user }}'">
@@ -26,7 +26,7 @@
 </li>
 {% if user.profile.hiddenMenu == True %}
       <li><ul id="hor-menu" class="oldMenu">
-        <li onclick="location.href='/'"><i class="fa fa-home" ></i> Inicio</li>
+        <li onclick="location.href='/inicio'"><i class="fa fa-home" ></i> Inicio</li>
         <li id="publish2"><i class="fa  fa-paper-plane"> </i> Mensaje</li>
         <li onclick="location.href='/following/{{ request.user }}'"><i class="fa fa-user"></i> Seguidos</li>
         <li id="agregar-amigo"><i class="fa fa-user-plus"> </i> Agregar</li>
