+ V3 + sass + para galería de imágenes

--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -166,7 +166,7 @@
                 <a id="likes"><strong>{{n_likes}}</strong><span value="me gusta" onclick="contador()">Me gusta</span></a>
             </li>
             <li>
-                <a class='inline' href="#inline_content"><strong>48</strong><span>Fotos</span></a>
+                <a class="to_gallery""><strong>48</strong><span>Fotos</span></a>
             </li>
           </ul>
         </div>
