--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -18,7 +18,7 @@
 
 {% block extra-css %}
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
+    <link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/timeline.css" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="{{STATIC_URL}}css/profile.css" onload="if(media!='all')media='all'">
     {% if liked == True %}
@@ -31,7 +31,6 @@
 {% endblock %}
 
 {% block content %}
-    <script async src="{{STATIC_URL}}js/jquery.colorbox.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/profile.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.easytabs.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.hashchange.min.js" type="text/javascript"></script>
@@ -92,8 +91,8 @@
           </div>
         </div>
       </div>
-        {% include "account/profile-gallery.html" %}
         </div>
+          {% include "account/profile-gallery.html" %}
     </div>
   </div>
 </div>
