--- a/skyfolk/static/css/gallery.css
+++ b/skyfolk/static/css/gallery.css
@@ -1,2 +1,55 @@
-.photo-gallery{display:none;padding:10px;background-color:#f9f9f9;position:absolute;-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%);-o-transform:translate(-50%, -50%);transform:translate(-50%, -50%);top:10%;left:50%}
+html, body {
+  color: #555 !important;
+  font-family: "Open Sans", sans-serif !important;
+  font-size: 11.5px !important;
+  overflow: hidden; }
+
+@media only screen and (min-width: 1220px) {
+  .container-gallery > .container-image {
+    margin-left: 2.81%; } }
+.wrapper {
+  padding: 10px;
+  margin-top: 1.3%; }
+
+.container-gallery {
+  margin-top: 2.7%; }
+
+.container-image {
+  background-color: #ffffff;
+  height: 400px;
+  padding: 10px;
+  border-radius: 3px;
+  margin-bottom: 2.5%;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
+  .container-image .principal-content {
+    display: block;
+    height: 85%;
+    width: 100%; }
+    .container-image .principal-content img {
+      width: 100%;
+      height: 100%;
+      border-radius: 3px; }
+  .container-image .legend-content {
+    height: 15%;
+    padding: 5px; }
+    .container-image .legend-content .legend-user-image {
+      width: 20%;
+      height: 50px;
+      display: inline-block;
+      float: left;
+      margin-right: 2%; }
+      .container-image .legend-content .legend-user-image img {
+        width: 100%;
+        height: 100%;
+        border-radius: 3px; }
+    .container-image .legend-content .legend-user-data a {
+      text-decoration: none;
+      color: #1e88e5;
+      font-weight: 600; }
+    .container-image .legend-content .legend-user-data .fa-clock-o {
+      clear: both;
+      display: block;
+      margin-top: 1.5%;
+      color: #555; }
+
 /*# sourceMappingURL=gallery.css.map */
