--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -1,14 +1,61 @@
 $greylightcolor: #f9f9f9
+$whitecolor: #ffffff
+$boxshadow: 0 1px 5px rgba(0, 0, 0, 0.15)
+$blueskyfolk: #1e88e5
+$graycolor: #555
 
-.photo-gallery
-  display: none
+html, body
+  color: #555 !important
+  font-family: "Open Sans",sans-serif !important
+  font-size: 11.5px !important
+  overflow: hidden
+
+@media only screen and (min-width: 1220px)
+  .container-gallery > .container-image
+    margin-left: 2.81%
+
+.wrapper
   padding: 10px
-  background-color: $greylightcolor
-  position: absolute
-  -webkit-transform: translate(-50%, -50%)
-  -moz-transform: translate(-50%, -50%)
-  -ms-transform: translate(-50%, -50%)
-  -o-transform: translate(-50%, -50%)
-  transform: translate(-50%, -50%)
-  top: 10%
-  left: 50%
+  margin-top: 1.3%
+
+.container-gallery
+  margin-top: 2.7%
+
+.container-image
+  background-color: $whitecolor
+  height: 400px
+  padding: 10px
+  border-radius: 3px
+  margin-bottom: 2.5%
+  box-shadow: $boxshadow
+  & .principal-content
+    display: block
+    height: 85%
+    width: 100%
+    & img
+      width: 100%
+      height: 100%
+      border-radius: 3px
+  & .legend-content
+    height: 15%
+    padding: 5px
+    & .legend-user-image
+      width: 20%
+      height: 50px
+      display: inline-block
+      float: left
+      margin-right: 2%
+      & img
+        width: 100%
+        height: 100%
+        border-radius: 3px
+    & .legend-user-data
+      & a
+        text-decoration: none
+        color: $blueskyfolk
+        font-weight: 600
+      & .fa-clock-o
+        clear: both
+        display: block
+        margin-top: 1.5%
+        color: $graycolor
